[metadata]
name = health-records-importer
version = 0.0.1
author = Paco Gomez
author_email = contact@pacogomez.com
description = health records importer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pacogomez/health-records-importer
project_urls =
    Bug Tracker = https://github.com/pacogomez/health-recordsi-importer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    click
    tabulate

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  hri = health_records_importer.hri:cli

